--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,11 @@ jobs:
      
       - name: Install packages
         run: yarn install --frozen-lockfile
+      - name: Building production bundle
+        run: yarn build
       - name: Build to GitHub Pages           
-        uses: crazy-max/ghaction-github-pages@v4
+        uses: crazy-max/ghaction-github-pages@v4 
         with:
           target_branch: gh-pages
-          build_dir: build
-          commit_message: 'chore(deploy): CV'
-          keep_history: false
-          jekyll: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-     
+          build_dir: build    
+          commit_message: 'chore(deploy): CV'     
