--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v4 
         with:
           target_branch: gh-pages
-          build_dir: build    
+          build_dir: dist   
           commit_message: 'chore(deploy): CV'     
