--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Building production bundle
         run: yarn build
-      - name: Build to GitHub Pages           
+      - name: Deploy to GitHub Pages           
         uses: crazy-max/ghaction-github-pages@v4 
         with:
           target_branch: gh-pages
