--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manoelacs.github.io/React-CV"
+  "homepage": "https://manoelacs.github.io/React-CV",
   "name": "react-resume",
   "version": "2.0.0",
   "private": true,
