--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Deploy to GitHub Pages           
         uses: crazy-max/ghaction-github-pages@v4 
         with:
-          target_branch: gh-pages
-          build_dir: build  
+          target_branch: gh-pages           
+          # Upload dist folder
+          path: './dist'          
           commit_message: 'chore(deploy): CV'   
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
