--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           target_branch: gh-pages           
           # Upload dist folder
-          path: './dist'          
+          build_dir: './dist'          
           commit_message: 'chore(deploy): CV'   
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
