--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,49 @@
-name: Deploy application [master]
+name: Deploy
 
 on:
   push:
-    branches: [master]
+    branches:
+      - main
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.17.x]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+
+      - name: Build project
+        run: npm run build
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          name: production-files
+          path: ./dist
 
-      - name: Install packages
-        run: yarn install --frozen-lockfile
-      - name: Building production bundle
-        run: yarn build
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: gh-pages
-          # Upload dist folder
-          build_dir: 'build'
-          commit_message: 'chore(deploy): CV'
-          keep_history: false
-          jekyll: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GH_PAT}}
+          publish_dir: ./dist
